# python-for-defenders

./: README.md  pyproject.toml  setup.sh
1-10_classes/: 1-10_classes.ipynb  testme.py
1-11_modules/: 1-11_modules.ipynb  testme.py
1-1_cells/: 1_1-cells.ipynb  testme.py
1-2_numbers/: 1_2-numbers.ipynb  testme.py
1-3_booleans/: 1-3_booleans.ipynb
1-4_strings/: 1-4_strings.ipynb  testme.py
1-5_lists-tuples/: 1-5_lists-tuples.ipynb  testme.py
1-6_dictionaries/: 1-6_dictionaries.ipynb
1-7_conditionals/: 1-7_conditionals.ipynb
1-8_loops/: 1-8_loops.ipynb  testme.py
1-9_functions/: 1-9_functions.ipynb  testme.py
