[project]
name = "python-for-defenders"
version = "0.2.0"
description = "Code for the course on The Taggart Institute"
authors = [
  { name = "Michael Taggart", email = "<mtaggart@taggart-tech.com>"}]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.5"
ipywidgets = "^8.1.7"
plotly = "^6.2.0"
pandas = "^2.3.1"
jupyter-dash = "^0.4.2"
jldracula = "^0.2.0"
requests = "^2.32.4"
jupyter = "^1.1.1"
